force-app/main/default/objects/Case/fields/SOPriority__c.field-meta.xml
<CustomField>
    <fullName>SOPriority__c</fullName>
    <label>Sales Ops Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - 1</fullName>
            </value>
            <value>
                <fullName>High - 2</fullName>
            </value>
            <value>
                <fullName>High - 3</fullName>
            </value>
            <value>
                <fullName>Med - 1</fullName>
            </value>
            <value>
                <fullName>Med - 2</fullName>
            </value>
            <value>
                <fullName>Med - 3</fullName>
            </value>
            <value>
                <fullName>Low - 1</fullName>
            </value>
            <value>
                <fullName>Low - 2</fullName>
            </value>
            <value>
                <fullName>Low - 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>