force-app/main/default/objects/Case/fields/Support_Product__c.field-meta.xml
<CustomField>
    <fullName>Support_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Product</valueSetName>
    </valueSet>
</CustomField>