force-app/main/default/objects/Case/fields/Support_Product_Subcomponent__c.field-meta.xml
<CustomField>
    <fullName>Support_Product_Subcomponent__c</fullName>
    <label>Subcomponent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Support_Product_Component__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Support_Product_Subcomponent</valueSetName>
    </valueSet>
</CustomField>