force-app/main/default/objects/Case/fields/Support_Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Product_Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Support_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Support_Product_Version</valueSetName>
    </valueSet>
</CustomField>