force-app/main/default/objects/Case/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Marketing Operations</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Industry Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>