force-app/main/default/objects/Case/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Customer Anticipated Timeframe</label>
    <type>Date</type>
</CustomField>