force-app/main/default/objects/Case/fields/Topics_Covered__c.field-meta.xml
<CustomField>
    <fullName>Topics_Covered__c</fullName>
    <inlineHelpText>What topics does this case cover?</inlineHelpText>
    <label>Topics Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregators</fullName>
            </value>
            <value>
                <fullName>Amazon DynamoDB</fullName>
            </value>
            <value>
                <fullName>AMF</fullName>
            </value>
            <value>
                <fullName>Anypoint MQ</fullName>
            </value>
            <value>
                <fullName>AMQP</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>API designer</fullName>
            </value>
            <value>
                <fullName>API Notebook</fullName>
            </value>
            <value>
                <fullName>API Portal</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Application down</fullName>
            </value>
            <value>
                <fullName>Artifacts</fullName>
            </value>
            <value>
                <fullName>AS2 Connector</fullName>
            </value>
            <value>
                <fullName>Audit Logs</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>BMC Remedy</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Build-Ant</fullName>
            </value>
            <value>
                <fullName>Build-Maven</fullName>
            </value>
            <value>
                <fullName>Business Groups</fullName>
            </value>
            <value>
                <fullName>B2B Connector</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Cassandra</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>CloudHub</fullName>
            </value>
            <value>
                <fullName>CloudHub API</fullName>
            </value>
            <value>
                <fullName>CloudHub Console</fullName>
            </value>
            <value>
                <fullName>CloudHub down</fullName>
            </value>
            <value>
                <fullName>CloudHub - Other</fullName>
            </value>
            <value>
                <fullName>CloudHub - Secure Data Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>