force-app/main/default/objects/Case/fields/Total_spent_time_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_spent_time_hours__c</fullName>
    <label>Total Time Spent (hours)</label>
    <summarizedField>Time_tracking__c.Time_spent__c</summarizedField>
    <summaryForeignKey>Time_tracking__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>