force-app/main/default/objects/Case/fields/TRL_Calc_Prio_Score__c.field-meta.xml
<CustomField>
    <fullName>TRL_Calc_Prio_Score__c</fullName>
    <description>CS TRL Calculated Priority populated from Priorization calculation, #W-8097697</description>
    <inlineHelpText>Prioritization Score (0-10 : Low-High)</inlineHelpText>
    <label>CS TRL Calculated Priority Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>