force-app/main/default/objects/Case/fields/TRL_Outgrow_Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>TRL_Outgrow_Survey_Name__c</fullName>
    <defaultValue>(&quot;CAMA-Full-v2&quot;)</defaultValue>
    <label>Outgrow Survey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>