force-app/main/default/objects/Case/fields/TRL_Outgrow_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>TRL_Outgrow_Survey_URL__c</fullName>
    <formula>IF( OR(ISBLANK(TRL_Outgrow_Survey_Name__c),ISBLANK(TRL_Outgrow_Survey_UTM__c)) , &quot;ERROR: Outgrow Survey Name and UTM values must be populated to generate a survey URL&quot;, hyperlink(&quot;https://mulesoftcalc.outgrow.us/&quot; +  TRL_Outgrow_Survey_Name__c  + &quot;?utm_source=&quot;+  TRL_Outgrow_Survey_UTM__c , &quot;https://mulesoftcalc.outgrow.us/&quot; +  TRL_Outgrow_Survey_Name__c  + &quot;?utm_source=&quot;+  TRL_Outgrow_Survey_UTM__c))</formula>
    <label>Outgrow Survey URL</label>
    <type>Text</type>
</CustomField>