force-app/main/default/objects/Case/fields/TRL_Outgrow_Survey_UTM__c.field-meta.xml
<CustomField>
    <fullName>TRL_Outgrow_Survey_UTM__c</fullName>
    <description>Field used by CS to configure Outgrow Surveys. The value in this field is used to match Survey Results to Case records via a Process Builder flow.</description>
    <inlineHelpText>This is the unique identifier / collector code that Survey responses are logged against. This value must be unique for each request.</inlineHelpText>
    <label>Outgrow Survey UTM</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>