force-app/main/default/objects/Case/fields/TRL_Priorisation_Details__c.field-meta.xml
<CustomField>
    <fullName>TRL_Priorisation_Details__c</fullName>
    <description>as per W-8937505 to display breakdown of calculation</description>
    <label>TRL Priorisation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>