force-app/main/default/objects/Case/fields/TRL_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>TRL_Request_Type__c</fullName>
    <description>CS Request Type for Priorization, #W-8097697</description>
    <inlineHelpText>CS Request Type for Priorization</inlineHelpText>
    <label>CS Priorization Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>strategic</fullName>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>tactical</fullName>
                <label>Tactical</label>
            </value>
            <value>
                <fullName>unspecified</fullName>
                <default>true</default>
                <label>unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>