force-app/main/default/objects/Case/fields/TRL_Score__c.field-meta.xml
<CustomField>
    <fullName>TRL_Score__c</fullName>
    <formula>IF(Account.ARR__c&gt;1000000, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRL Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>