force-app/main/default/objects/Case/fields/TRL_Task_Is_Clear__c.field-meta.xml
<CustomField>
    <fullName>TRL_Task_Is_Clear__c</fullName>
    <description>CS Task Clarity Status after review, for Priorization, #W-8097697</description>
    <inlineHelpText>CS Task Clarity Status after review, for Priorization</inlineHelpText>
    <label>CS Task Clarity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>unspecified</fullName>
                <default>true</default>
                <label>unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>