force-app/main/default/objects/Case/fields/TRL_Type__c.field-meta.xml
<CustomField>
    <fullName>TRL_Type__c</fullName>
    <description>CS Request Type classify requests as INTERNAL or Others</description>
    <inlineHelpText>CS Request Type classify requests as INTERNAL or Others</inlineHelpText>
    <label>CS Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTERNAL</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>ADHOC</fullName>
                <label>Ad-Hoc</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>