force-app/main/default/objects/Case/fields/TRL_Use_Outgrow_Survey__c.field-meta.xml
<CustomField>
    <fullName>TRL_Use_Outgrow_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Outgrow Survey?</label>
    <type>Checkbox</type>
</CustomField>