force-app/main/default/objects/Case/fields/Type_Status_Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Type_Status_Outcome_Reason__c</fullName>
    <formula>TEXT(Type) &amp; &quot; - &quot; &amp; TEXT(Status) &amp; &quot; - &quot; &amp; TEXT( Outcome__c ) &amp; &quot; - &quot; &amp; TEXT( Reason )</formula>
    <label>Type - Status - Outcome - Reason</label>
    <type>Text</type>
</CustomField>