force-app/main/default/objects/Case/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version-OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.0.0</fullName>
            </value>
            <value>
                <fullName>1.0.6</fullName>
            </value>
            <value>
                <fullName>1.1.0</fullName>
            </value>
            <value>
                <fullName>1.1.1</fullName>
            </value>
            <value>
                <fullName>1.1.2</fullName>
            </value>
            <value>
                <fullName>1.1.3</fullName>
            </value>
            <value>
                <fullName>1.1.4</fullName>
            </value>
            <value>
                <fullName>1.2.0</fullName>
            </value>
            <value>
                <fullName>1.2.1</fullName>
            </value>
            <value>
                <fullName>1.3.0</fullName>
            </value>
            <value>
                <fullName>1.3.1</fullName>
            </value>
            <value>
                <fullName>1.3.2</fullName>
            </value>
            <value>
                <fullName>1.3.3</fullName>
            </value>
            <value>
                <fullName>1.3.4</fullName>
            </value>
            <value>
                <fullName>1.3.5</fullName>
            </value>
            <value>
                <fullName>1.3.6</fullName>
            </value>
            <value>
                <fullName>1.3.7</fullName>
            </value>
            <value>
                <fullName>1.4.0</fullName>
            </value>
            <value>
                <fullName>1.4.1</fullName>
            </value>
            <value>
                <fullName>1.4.2</fullName>
            </value>
            <value>
                <fullName>1.4.3</fullName>
            </value>
            <value>
                <fullName>1.4.4</fullName>
            </value>
            <value>
                <fullName>1.5.0</fullName>
            </value>
            <value>
                <fullName>1.5.1</fullName>
            </value>
            <value>
                <fullName>1.5.2</fullName>
            </value>
            <value>
                <fullName>1.5.3</fullName>
            </value>
            <value>
                <fullName>1.6.0</fullName>
            </value>
            <value>
                <fullName>1.6.1</fullName>
            </value>
            <value>
                <fullName>1.6.2</fullName>
            </value>
            <value>
                <fullName>1.6.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>