force-app/main/default/objects/Case/fields/VPC_Provisioning_Phase__c.field-meta.xml
<CustomField>
    <fullName>VPC_Provisioning_Phase__c</fullName>
    <description>VPN provisioning phase</description>
    <label>VPN Provisioning Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery call</fullName>
            </value>
            <value>
                <fullName>Questionnaire</fullName>
            </value>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>