force-app/main/default/objects/Case/recordTypes/TRL.recordType-meta.xml
<RecordType>
    <fullName>TRL</fullName>
    <active>true</active>
    <businessProcess>CS Tech Request</businessProcess>
    <label>CS Tech Request</label>
</RecordType>