force-app/main/default/objects/Case/validationRules/TRL_AssignedTo_Person.validationRule-meta.xml
<ValidationRule>
    <fullName>TRL_AssignedTo_Person</fullName>
    <active>true</active>
    <description>TRL AssignedTo_Person</description>
    <errorConditionFormula>AND(TEXT($User.TRLcases__c) == &apos;AssignedTo Person&apos;,
$RecordType.Name==&quot;TRL&quot;,
OR(
ISCHANGED( AccountId ),
ISCHANGED(Timeframe__c),
ISCHANGED(Subject),
ISCHANGED(Description),
ISCHANGED( CS_Reason__c ),
ISCHANGED( Request_for_Assistance_by__c )
)
)</errorConditionFormula>
    <errorMessage>CSA/CSE only allow to change a Status field.</errorMessage>
</ValidationRule>