force-app/main/default/objects/Case/listViews/APAC_Team_Case.listView-meta.xml
<ListView>
    <fullName>APAC_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech APAC Team</label>
    <queue>APAC_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>