force-app/main/default/objects/Case/listViews/CBU_Case.listView-meta.xml
<ListView>
    <fullName>CBU_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER CBU Team</label>
    <queue>CS_Tech_AMER_CBU_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>