force-app/main/default/objects/Case/listViews/CMT_Case.listView-meta.xml
<ListView>
    <fullName>CMT_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER CMT Team</label>
    <queue>CS_Tech_AMER_CMT_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>