force-app/main/default/objects/Case/listViews/CS_Tech_Global_Team_Case.listView-meta.xml
<ListView>
    <fullName>CS_Tech_Global_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech Global Team</label>
    <queue>CS_Tech_Global_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>