force-app/main/default/objects/Case/listViews/CSSA_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CSSA_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER CSSA Queue Team</label>
    <queue>CS_Tech_AMER_CSSA_Queue_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>