force-app/main/default/objects/Case/listViews/EBU_Case.listView-meta.xml
<ListView>
    <fullName>EBU_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER EBU Team</label>
    <queue>CS_Tech_AMER_EBU_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>