force-app/main/default/objects/Case/listViews/EMEA_Team_Case.listView-meta.xml
<ListView>
    <fullName>EMEA_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech EMEA Team</label>
    <queue>EMEA_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>