force-app/main/default/objects/Case/listViews/ESG_Support_Case.listView-meta.xml
<ListView>
    <fullName>ESG_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech ESG Support Team</label>
    <queue>ESG_Support</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>