force-app/main/default/objects/Case/listViews/FINS_Case.listView-meta.xml
<ListView>
    <fullName>FINS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER FINS Team</label>
    <queue>CS_Tech_AMER_FINS_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>