force-app/main/default/objects/Case/listViews/Global_Team_Case.listView-meta.xml
<ListView>
    <fullName>Global_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Global_Team</label>
    <queue>Global_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>