force-app/main/default/objects/Case/listViews/GovCloud_Support_Case.listView-meta.xml
<ListView>
    <fullName>GovCloud_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech GovCloud Support</label>
    <queue>GovCloud_Support</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>