force-app/main/default/objects/Case/listViews/HLS_Case.listView-meta.xml
<ListView>
    <fullName>HLS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech AMER HLS Team</label>
    <queue>CS_Tech_AMER_HLS_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>