force-app/main/default/objects/Case/listViews/My_TRL_List.listView-meta.xml
<ListView>
    <fullName>My_TRL_List</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Account_Region__c</columns>
    <columns>Level_of_Priority__c</columns>
    <columns>CSA_CSE__c</columns>
    <columns>Request_for_Assistance_by__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.TRL</value>
    </filters>
    <label>My TRL List</label>
</ListView>