force-app/main/default/objects/Case/listViews/NA_East_Team_Case.listView-meta.xml
<ListView>
    <fullName>NA_East_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>NA_East_Team</label>
    <queue>NA_East_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>