force-app/main/default/objects/Case/listViews/NA_Federal_Team_Case.listView-meta.xml
<ListView>
    <fullName>NA_Federal_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Tech Federal Team</label>
    <queue>NA_Federal_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>